# eurovision-api

./: .gitignore  import_data.py  pyproject.toml
app/: main.py
data/: 2025.json
dbschema/: default.gel
dbschema/migrations/: 00001-m1fu4z7.edgeql
