[project]
name = "eurovision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-cli>=0.0.7",
    "fastapi-cloud-cli>=0.1.0",
    "fastapi[standard]>=0.115.12",
    "gel>=3.1.0",
]

[[tool.uv.index]]
url = "https://pypi.python.org/simple"

[[tool.uv.index]]
url = "https://fastapi-cli.pages.dev/simple"
default = true
